--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <path d="M14.875 15.375L11.7937 12.2938" stroke="#ADADAD" stroke-linecap="round"
                             stroke-linejoin="round" />
                     </svg></div>
-                <input type="text" placeholder="Search for recipes...">
+                <input type="text" id="searchBar" placeholder="Search for recipes...">
                 <div class="search-btn"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="24"
                         viewBox="0 0 25 24" fill="none">
                         <path fill-rule="evenodd" clip-rule="evenodd"
