updated image links

--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
 
                 <div class="rattings">
                     <p>Rating</p>
-                    <input type="checkbox" id="above-4"><label for="above-4"> 4 and Above</label><br>
-                    <input type="checkbox" id="below-4"><label for="below-4"> Below 4</label><br>
+                    <label for="above-4"><input type="checkbox" id="above-4"> 4 and Above</label><br>
+                    <label for="below-4"><input type="checkbox" id="below-4"> Below 4</label><br>
                 </div>
             </div>
             <div id="container" class="card-container">
